[package]
edition = "2021"
name = "store"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
dotenv = "0.15.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
tokio = {version = "1.21.2", features = ["full"]}
tokio-postgres = {version = "0.7.7", features = ["with-serde_json-1"]}
